re PR preprocessor/15067 (Minor glitch in the source of cpp.)

* cppinit.c (cpp_read_main_file):  Return NULL rather than false.
	Fixes PR preprocessor/15067.

From-SVN: r81071